# anthropic-rs

./: .all-contributorsrc  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml
.github/: README.md
.github/workflows/: ci.yml  fuzz.yml  supply-chain.yml
anthropic/: Cargo.toml  README.md
anthropic/src/: batches.rs  client.rs  config.rs  count_tokens.rs  error.rs  lib.rs  main.rs  models.rs  stream.rs  tool_loop.rs  types.rs
anthropic/tests/: client_batches.rs  client_count_tokens.rs  client_messages.rs  client_models.rs  tool_loop.rs  tracing_integration.rs
examples/: Cargo.toml  README.md
examples/basic-completion/: Cargo.toml
examples/basic-completion/src/: main.rs
examples/basic-messages/: Cargo.toml
examples/basic-messages/src/: main.rs
examples/streaming-completion/: Cargo.toml
examples/streaming-completion/src/: main.rs
examples/streaming-messages/: Cargo.toml
examples/streaming-messages/src/: main.rs
examples/tool-loop/: Cargo.toml
examples/tool-loop/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: parse_error.rs  parse_results_jsonl.rs
src/: config.rs  main.rs
