[package]
name = "anthropic"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/abdelhamidbakhta/anthropic-rs"
repository = "https://github.com/abdelhamidbakhta/anthropic-rs"
categories = ["api-bindings", "web-programming", "asynchronous"]
keywords = ["anthropic", "claude", "ai", "sdk", "async"]
description = "Anthropic Rust SDK."
readme = "README.md"

[features]
default = ["rustls"]
# Enable rustls for TLS support
rustls = ["reqwest/rustls-tls-native-roots"]
# Enable native-tls for TLS support
native-tls = ["reqwest/native-tls"]

[dependencies]
backoff = { version = "0.4", features = ["tokio"], default-features = false }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"], default-features = false }
reqwest-eventsource = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"

[dev-dependencies]
dotenvy = "0.15"
